Handling Form Submission

--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
   <title>Secret Message</title>
 </head>
 <body>
-  
+  <div class="row">
+    <div class="col s8 offset-s2">
+      <div class="card-panel">
+        <form action="">
+          <label for="">Enter a Secret Message</label>
+          <input type="text" name="" id="">
+          <button class="btn">Create</button>
+        </form>
+      </div>
+    </div>
+  </div>
 
   <script src="main.js"></script>
 </body>
