--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
       <div class="card-panel">
         <form action="">
           <label for="">Enter a Secret Message</label>
-          <input type="text" name="" id="">
+          <input id="message-input" type="text" name="" id="">
           <button class="btn">Create</button>
         </form>
+      </div>
+
+      <div>
+        Share this link with a friend
+        <input id="link-input" type="text">
       </div>
     </div>
   </div>
