--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <style>
+    .row {
+      margin-top: 25vh;
+    }
+  </style>
   <title>Secret Message</title>
 </head>
 <body>
   <div class="row">
     <div class="col s8 offset-s2">
-      <div class="card-panel">
+      <div id="message-form" class="card-panel">
         <form action="">
           <label for="">Enter a Secret Message</label>
           <input id="message-input" type="text" name="" id="">
@@ -17,9 +22,11 @@
         </form>
       </div>
 
-      <div>
-        Share this link with a friend
-        <input id="link-input" type="text">
+      <div id="link-form" class="card-panel hide">
+        <div>
+          Share this link with a friend
+          <input id="link-input" type="text">
+        </div>
       </div>
     </div>
   </div>
